fixed spacing issues with manatee game

--- a/manatee/css/style.css
+++ b/manatee/css/style.css
@@ -15,30 +15,37 @@
   border: 0;
 }
 
+@font-face {
+  font-family: 'Distant Galaxy';
+  src: url('../../assets/fonts/distant-galaxy/distant-galaxy.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body
 {
-  font-family: "Verdana", sans-serif;
+  font-family: 'Distant Galaxy', sans-serif;
   background: linear-gradient(to bottom, #000, #330099);
   height:100vw;
   font-size: 18px;
 }
 
 header {
-  width: 1280px;
+  width: 90%;
   max-width: 100%;
-  margin: auto !important;
+  margin: auto;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  display: flex !important;
-  flex-direction: row !important;
-  justify-content: space-between !important;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 
 }
 
 ul {
   display: flex;
-    flex-direction: row;
-      justify-content: flex-end;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 main {
@@ -49,18 +56,16 @@ main {
 h1 
 {
   font-size: 2.5vw;
+  letter-spacing: 0.25rem;
   color: #FDBB30;
-  font-family: "Verdana", sans-serif;
 }
 
 .main9 
 {
   width: 1280px;
-  height: 820px;
   margin: auto;
   max-width: 100%;
-  max-height: 100%;
-/*
+  /*
   background: linear-gradient(to bottom, #FFF, #EAEBDB);
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -73,7 +78,7 @@ h1
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   box-shadow: 0.25rem 0.25rem 0 0.25rem #FDBB30;
-  */
+   */
 }
 
 .footer
@@ -102,10 +107,10 @@ li a
 /*
 li a:hover
 {	
-  background: #59788F;
-  color: #FFF;
+background: #59788F;
+color: #FFF;
 }
-*/
+ */
 
 a:hover
 {
@@ -114,6 +119,6 @@ a:hover
 }
 
 canvas {
-  border: 1rem solid #fdbb30;
+  border: 5px solid #fdbb30;
   border-radius: 1rem;
 }
